# experiments

./: .env.template  .gitignore  Containerfile  justfile  pyproject.toml
charts/experiments/: Chart.yaml  values.yaml
charts/experiments/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
src/experiments/: __main__.py
